# cpp-library-template

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
dependencies/: CMakeLists.txt
include/cpp-library-template/: lib.h
samples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  lib.cpp
